@@ -3,6 +3,7 @@ Revision history for Getopt-Long
 {{$NEXT}}
     - Add support for enum types
     - Add IO::Path argument support
+    - Add DateTime and Date argument support
     - Add type conversions for positional arguments
     - Reject values failing argument constraints
     - Add compat-positional option
